# Emotions-Prediction-App

./: .gitignore  README.md  docker-compose.yaml  env.example  pyproject.toml
app-backend/: Dockerfile  main.py  pyproject.toml
app-backend/models/: tfidf.pkl
app-backend/src/: main.py
app-frontend/: Dockerfile  package-lock.json  package.json
app-frontend/public/: index.html
app-frontend/src/: App.js  index.css
app-frontend/src/components/: EmotionPrediction.jsx  EmotionsProbabilities.jsx  PredictionComponent.jsx  textField.jsx
app-frontend/src/css/: App.css  EmotionPrediction.css  EmotionsProbabilities.css  PredictionComponent.css  index.css  textField.css
models/: emotions_classifier_model.pkl
notebooks/: emotions_analysis.ipynb  emotions_df.csv
utils/: functions.py
