[tool.poetry]
name = "app-backend"
version = "0.1.0"
description = ""
authors = ["olast45"]
readme = "README.md"
packages = [{include = "app_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
xgboost = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
