[tool.poetry]
name = "app-backend"
version = "0.1.0"
description = ""
authors = ["olast45"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
xgboost = "^2.0.3"
scikit-learn = "1.2.2"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
